<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ventanas.ActivityCalendario">

    <ImageView
        android:id="@+id/imagenFondo"
        android:layout_width="485dp"
        android:layout_height="108dp"
        android:backgroundTint="@color/colorPaletta1"
        android:background="@drawable/encabezado"
        android:contentDescription="@string/imgEncabezado"
        android:scaleType="fitXY"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ImageContrastCheck,VisualLintBounds" />

    <FrameLayout
        android:layout_width="354dp"
        android:layout_height="330dp"
        android:background="@drawable/frame_eventos_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.354">

        <com.example.supertasks.adaptadores.EventoCalendario
            android:id="@+id/calendario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </FrameLayout>

    <ImageView
        android:id="@+id/imagenFondo2"
        android:layout_width="408dp"
        android:layout_height="115dp"
        android:background="@drawable/abajo"
        android:backgroundTint="@color/colorPaletta2"
        android:contentDescription="@string/imgFondo2"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="ImageContrastCheck,VisualLintBounds" />

    <Button
        android:id="@+id/btnAgregar"
        android:layout_width="142dp"
        android:layout_height="63dp"
        android:background="@color/colorPaletta4"
        android:text="@string/btnAgregar"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.751"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <ImageView
        android:id="@+id/btnRegresar"
        android:layout_width="110dp"
        android:layout_height="87dp"
        android:contentDescription="@string/imgRegresarCalend"
        android:src="@drawable/regresar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.989" />

    <TextView
        android:id="@+id/btnTxtRegresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="REGRESAR"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.952" />

    <TextView
        android:id="@+id/labelCalendario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/textCalendario"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049"  />


</androidx.constraintlayout.widget.ConstraintLayout>