<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frameEncabezado"
        android:layout_width="411dp"
        android:layout_height="84dp"
        android:background="@drawable/frame_encabezado_verde"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="60dp"
            android:layout_height="54dp"
            android:contentDescription="@string/btnRegresar"
            app:srcCompat="@drawable/regresar2" />

    </FrameLayout>

    <Spinner
        android:id="@+id/comboPendientesCompletados"
        android:layout_width="316dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.173" />

    <ImageView
        android:id="@+id/imgFondo3"
        android:layout_width="421dp"
        android:layout_height="80dp"
        android:contentDescription="@string/imgFondo2"
        android:scaleType="fitXY"
        android:src="@drawable/abajo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="ImageContrastCheck,VisualLintBounds" />

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="58dp"
        android:layout_height="53dp"
        android:background="@drawable/frame_calendario"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="671dp">

        <ImageView
            android:id="@+id/imgMasAgregar"
            android:layout_width="52dp"
            android:layout_height="50dp"
            android:contentDescription="@string/imgMas"
            app:srcCompat="@drawable/mas" />
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView2"
        android:layout_width="336dp"
        android:layout_height="353dp"
        android:layout_marginTop="64dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgFondo3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.398" />

    <Button
        android:id="@+id/btnEditar2"
        android:layout_width="63dp"
        android:layout_height="35dp"
        android:drawableTop="@drawable/editar"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/recyclerView2"
        app:layout_constraintEnd_toEndOf="@+id/recyclerView2"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="@+id/recyclerView2"
        app:layout_constraintTop_toTopOf="@+id/recyclerView2"
        app:layout_constraintVertical_bias="0.066" />

    <Button
        android:id="@+id/btnEditar3"
        android:layout_width="63dp"
        android:layout_height="35dp"
        android:drawableTop="@drawable/editar"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/recyclerView2"
        app:layout_constraintEnd_toEndOf="@+id/recyclerView2"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="@+id/recyclerView2"
        app:layout_constraintTop_toTopOf="@+id/recyclerView2"
        app:layout_constraintVertical_bias="0.229" />

    <Button
        android:id="@+id/btnEditar4"
        android:layout_width="63dp"
        android:layout_height="35dp"
        android:drawableTop="@drawable/editar"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/recyclerView2"
        app:layout_constraintEnd_toEndOf="@+id/recyclerView2"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="@+id/recyclerView2"
        app:layout_constraintTop_toTopOf="@+id/recyclerView2"
        app:layout_constraintVertical_bias="0.405" />

    <Button
        android:id="@+id/btnEditar5"
        android:layout_width="63dp"
        android:layout_height="35dp"
        android:drawableTop="@drawable/editar"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/recyclerView2"
        app:layout_constraintEnd_toEndOf="@+id/recyclerView2"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="@+id/recyclerView2"
        app:layout_constraintTop_toTopOf="@+id/recyclerView2"
        app:layout_constraintVertical_bias="0.6" />

</androidx.constraintlayout.widget.ConstraintLayout>